tests/error/private_other.gw
#! [contains] can't access private
class C { private var int i;  }

class D {
  var C c;
  <<< c.i >>>;
}
